tests/baselines/reference/typeParametersInStaticProperties.errors.txt
==== tests/cases/compiler/typeParametersInStaticProperties.ts (1 errors) ====
    class foo<T> {
        static P: T;
                  ~
!!! error TS2099: Static members cannot reference class type parameters.
    } 